--- a/theme/templates/admin/includes/dropdown_menu.html
+++ b/theme/templates/admin/includes/dropdown_menu.html
@@ -35,8 +35,10 @@
 							{% elif app.index == 1 %}
 							<span class="icon"><i class="material-icons">shopping_cart</i></span>
 							{% elif app.index == 2 %}
-							<span class="icon"><i class="fa fa-wrench"></i> </span>
+							<span class="icon"><i class="material-icons">book</i></span>
 							{% elif app.index == 3 %}
+							<span class="icon"><i class="fa fa-wrench"></i> </span>
+							{% elif app.index == 4 %}
 							<span class="icon"><i class="fa fa-user"></i></span>
 							{% else %}
 							<span class="icon"><i class="material-icons">apps</i></span>
