--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -153,6 +153,9 @@
 </section>
 {% endblock %}
 
+{% block first_time_user %}
+{% endblock first_time_user %}
+
 {% block slider %}
 {% endblock %}
 
