--- a/theme/templates/accounts/includes/user_panel.html
+++ b/theme/templates/accounts/includes/user_panel.html
@@ -1,14 +1,15 @@
 {% load i18n mezzanine_tags accounts_tags %}
 <div class="pull-right">
 	{% if not request.user.is_authenticated %}
-		<a class="button dark" href="{% url "signup" %}">Создать магазин</a>
+		<a class="button dark" href="{% url "signup" %}?next=/init/">Создать магазин</a>
 		<a class="button dark" href="{% url "login" %}">Войти</a>
 	{% else %}
 		{% if not request.user.usershop %}
-			<a class="button gray" href="{% url "shop_create" %}">Создать магазин</a>
+			<!--<a class="button dark" href="{% url "shop_create" %}">Создать магазин</a>-->
 		{% else %}
-			<a class="button gray" href="{% url "profile_settings" %}">Панель управления</a>
+			<!--<a class="button dark" href="{% url "profile_settings" %}">Панель управления</a>-->
 		{% endif %}
+			<a class="button dark" href="{% url "profile_settings" %}">Панель управления</a>
 			<a class="button dark" href="{% url 'logout' %}?next={{ request.path }}">{% trans "Log out" %}</a>
 		{% endif %}
 </div>
