fix mega menu to top navbar

--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -45,7 +45,7 @@
 
 {% elif branch_level == 1 %}
     {% for page in page_branch %}
-    <div class="two-columns margin-bottom-15">
+    <div class="one-column margin-bottom-15">
     <ul>
         {% if page.in_menu %}
         <li class="headline-link">
