--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -63,7 +63,7 @@
     <li>
         <a href="{{ page.get_absolute_url }}"> {{ page.title }} </a>
         {% if page.has_children_in_menu %}
-            <ol>{% page_menu page %}</ol>
+            <ol>{# {% page_menu page %} #}</ol>
         {% endif %} 
     </li>
     {% endif %}
