--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -22,6 +22,7 @@
 <link rel="stylesheet" href="{% static "css/style.css" %}">
 <link rel="stylesheet" href="{% static "css/green.css" %}">
 <link rel="stylesheet" href="{% static "css/custom.css" %}">
+<link rel="stylesheet" href="{% static "css/mega_dropdown.css" %}">
 <!--[if lt IE 9]>
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js' %}"></script>
 <![endif]-->
@@ -288,7 +289,8 @@
 <script src="{% static 'js/custom.js' %}"></script>
 <script src="{% static 'js/active-branch-show.js' %}"></script>
 <script src="{% static 'js/mask.js' %}"></script>
-
+<script src="{% static 'js/jquery.menu-aim.js' %}"></script>
+<script src="{% static 'js/main.js' %}"></script>
 {% block extra_js %}
 {% endblock %}
 {% endcompress %}
