--- a/theme/static/css/mega_dropdown.css
+++ b/theme/static/css/mega_dropdown.css
@@ -1,103 +1,38 @@
-@charset "UTF-8";
-
-
-
-/* -------------------------------- 
-
-Primary style
-
--------------------------------- */
-
 *,
 *::after,
 *::before {
     box-sizing: border-box;
 }
 
-html {
-    font_-size: 62.5%;
-}
-
-body {
-    font_-size: 1.6rem;
-    font_-family: sans-serif;
-    color: #111433;
-    background-color: #ffffff;
-}
-
-a {
-    color: #3acf87;
-    text-decoration: none;
-}
-
-img {
-    max-width: 100%;
-}
-
-input {
-    font_-family: sans-serif;
-    font_-size: 1.6rem;
-}
-
-
-
-
-/* remove “X” from search input field */
-
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
-    display: none;
-}
-
-input[type=text]::-ms-clear {
-    display: none;
-    width: 0;
-    height: 0;
-}
-
-input[type=text]::-ms-reveal {
-    display: none;
-    width: 0;
-    height: 0;
-}
-
-
-
-
-/* -------------------------------- 
-
-Main Components 
-
--------------------------------- */
-
-header {
-    height: 100px;
-    background: #ffffff;
-}
 
 .cd-dropdown-wrapper {
     display: inline-block;
     position: relative;
-    height: 40px;
+    /*height: 40px;*/
     /*margin: 30px 0 0 5%;*/
     -webkit-font_-smoothing: antialiased;
     -moz-osx-font_-smoothing: grayscale;
 }
 
-.cd-dropdown-wrapper ul li:hover>a {
+.cd-dropdown-wrapper ul li:hover>a,
+.cd-dropdown-content .cd-secondary-dropdown>li.empty-children:hover>a {
     color: #3acf87;
+    -webkit-transition: color 0.15s, -webkit-transform 0.15s;
+    -moz-transition: color 0.15s, -moz-transform 0.15s;
+    transition: color 0.15s, transform 0.15s;
 }
 
 .cd-dropdown-trigger {
     display: block;
     position: relative;
     padding: 0 40px 0 20px;
-    line-height: 48px;
+    line-height: 50px;
     /* background-color: #111433; */
     color: #ffffff;
-    border-radius: 3px;
+    /*border-radius: 3px;*/
+}
+.cd-dropdown-trigger:hover {
+    color: #fff;
 }
 
 .no-touch .cd-dropdown-trigger:hover {
@@ -312,7 +247,7 @@ header {
 @media only screen and (min-width: 926px) {
     .cd-dropdown {
         position: absolute;
-        top: calc(100% - 2px);
+        top: 100%;
         /* reset style*/
         height: auto;
         width: auto;
@@ -779,17 +714,26 @@ header {
         left: 15px;
         height: 1px;
         width: 520px;
-        background-color: #ebebeb;
+        /*background-color: #ebebeb;*/
     }
     .cd-dropdown-content .cd-secondary-dropdown>li>a {
-        color: #3acf87;
+        color: #606060;
         font_-size: 1.6rem;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         line-height: 30px;
         height: 30px;
+        font-weight: 600;
         pointer-events: none;
     }
+    .cd-dropdown-content .cd-secondary-dropdown>li.has-children>a {
+        background: #f0f0f0;
+        color: #707070;
+        font-weight: 600;
+        padding: 0px 6px;
+    }
     .cd-dropdown-content .cd-secondary-dropdown>li.empty-children>a {
+        color: #606060;
+        font-size: 15px;
         pointer-events: auto;
     }
     .cd-dropdown-content .cd-secondary-dropdown>li>a::after,
@@ -811,11 +755,12 @@ header {
         border-color: #ebebeb;
         border-style: solid;
         padding: 0 30px;
-        height: 250px;
+        /*height: 250px;*/
+        min-height: 250px;
     }
     .cd-dropdown-content .cd-secondary-dropdown>li {
         padding: 20px;
-        height: 50px;
+        height: 40px;
     }
     .cd-dropdown-content .cd-secondary-dropdown>li>a.screen-hide {
         display: none;
@@ -832,6 +777,7 @@ header {
         transform: translate(0);
         position: relative;
         height: auto;
+        margin-left: 10px;
     }
     .cd-dropdown-content .cd-secondary-dropdown>li>ul>.go-back {
         display: none;
