--- a/theme/templates/pages/menus/dropdown.html
+++ b/theme/templates/pages/menus/dropdown.html
@@ -69,7 +69,7 @@
             </ul>
         </li>
         {% else %}
-            <li class="empty-children"><a class="cd-dropdown-item" href="{{ page.get_absolute_url }}">{{ page.title }}</a></li>
+            <li class="empty-children"><a href="{{ page.get_absolute_url }}">{{ page.title }}</a></li>
         {% endif %}
         
     {% endif %}
