--- a/theme/static/css/custom.css
+++ b/theme/static/css/custom.css
@@ -981,11 +981,6 @@ input[type="password"],
     }
 }
 
-@media only screen and (min-width: 480px) and (max-width: 767px) {
-    .container.fullwidth-element.userpanel {
-        width: 420px
-    }
-}
 
 @media only screen and (max-width: 767px) {
     .custom_column {
@@ -1022,7 +1017,7 @@ input[type="password"],
     }
 
     .item-description span {
-        font-size: 11px;
+        /*font-size: 11px;*/
         font-weight: 500
     }
 
@@ -1080,7 +1075,10 @@ input[type="password"],
     }
 }
 
-@media only screen and (max-width: 767px) and (min-width: 480px) {
+@media only screen and (min-width: 480px) and (max-width: 767px) {
+    .container.fullwidth-element.userpanel {
+        width: 420px
+    }
     .custom_column {
         margin-left: 5px!important;
         margin-right: 5px!important;
@@ -1089,5 +1087,20 @@ input[type="password"],
 
     .top-search input {
         width: 195px
+    }
+    /*.item-description span {
+        max-height: 45px;
+        min-height: 45px;
+    }*/
+}
+
+@media only screen and (max-width: 479px) {
+    .item-description span {
+        max-height: 35px;
+        min-height: 35px;
+    }
+    .img-caption figcaption h3 {
+        font-size: 15px;
+        line-height: 22px;
     }
 }
