--- a/theme/templates/_index.html
+++ b/theme/templates/_index.html
@@ -209,11 +209,11 @@
 {% endblock %}
 
 {% block parallax_banner %}
-<div class="parallax-banner fullwidth-element"  data-background="#000" data-opacity="0.45" data-height="200">
+<!--<div class="parallax-banner fullwidth-element"  data-background="#000" data-opacity="0.45" data-height="200">
     <img src="{% static 'images/parallax.jpg' %}" alt="" />
     <div class="parallax-overlay"></div>
     <div class="parallax-title">###<span>HANDMAKER.TOP</span></div>
-</div>
+</div>-->
 {% endblock %}
 
 {% block product_list %}
